<resources>
    <string name="app_name">AndroidCommerce</string>
    <string name="currency">VND</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="signup">Sign up</string>
    <string name="detail">Details</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="customer">Customer</string>
    <string name="admin">Admin</string>
    <string name="product">Product</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="check_out">Check out</string>
    <string name="order_id">OrderId</string>
    <string name="products_number">No of products</string>
    <string name="order_status">Order status</string>
    <string name="completed">Completed</string>
    <string name="price">Price</string>
    <string name="order_date">Order date</string>
    <string name="view">View</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="cat_girl">Girl</string>
    <string name="cat_car">Car</string>
    <string name="product_price">Price</string>
    <string name="add_category">Add category</string>
    <string name="category">Category</string>
    <string name="add_product">Add product</string>
</resources>
